--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
+        classpath 'net.ltgt.gradle:gradle-apt-plugin:0.15'
     }
 }
 
@@ -18,6 +19,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'com.jfrog.bintray'
+apply plugin: 'net.ltgt.apt-idea'
 
 // global settings
 group 'io.cloudwall'
@@ -44,9 +46,14 @@ sourceSets {
 }
 
 dependencies {
-    compile 'com.google.code.findbugs:jsr305:3.0.2',
-	'net.dean.jraw:JRAW:1.0.0',
-        'com.github.apanimesh061:vader-sentiment-analyzer:1.0'
+    compile 'com.github.apanimesh061:vader-sentiment-analyzer:1.0',
+            'io.cloudwall:bladerunner:0.1.6',
+            'net.dean.jraw:JRAW:1.0.0',
+            'org.apache.logging.log4j:log4j-1.2-api:2.10.0',
+            'org.apache.lucene:lucene-analyzers-common:6.4.1',
+            'org.jdbi:jdbi3-stringtemplate4:3.1.0',
+            'org.xerial:sqlite-jdbc:3.21.0.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.15'
     testCompile 'junit:junit:4.12',
                 'org.hamcrest:hamcrest-library:1.4-atlassian-1',
                 'org.mockito:mockito-core:2.17.0'
